--- a/tasks/collapse.html
+++ b/tasks/collapse.html
@@ -1,39 +1,63 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+    />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-    <link rel="stylesheet" href="../assets/javascript/build/style.css">
+    <link rel="stylesheet" href="../assets/javascript/build/style.css" />
 
     <title>Collapse</title>
-</head>
-<body>
-<!--
+  </head>
+  <body>
+    <!--
     Добавить необходимые классы и атрибуты для разворачивания елементов
     Сделать первый елемент развернутым по умолчанию
 -->
 
     <div class="container">
-        <button>Toggle first element</button>
-        <button>Toggle second element</button>
+      <button
+        type="button"
+        data-toggle="collapse"
+        data-target="#collapse1"
+        aria-expanded="true"
+        aria-controls="collapse1"
+      >
+        Toggle first element
+      </button>
+      <button
+        type="button"
+        data-toggle="collapse"
+        data-target="#collapse2"
+        aria-expanded="false"
+        aria-controls="collapse2"
+      >
+        Toggle second element
+      </button>
 
-        <div class="collapse">
-            <div class="border p-2 mb-2">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea impedit voluptas voluptatem. Debitis fuga harum nesciunt praesentium qui, quisquam tempore. Ab ad amet assumenda facilis impedit libero perspiciatis repellendus voluptas?
-            </div>
+      <div class="collapse.show" id="collapse1">
+        <div class="border p-2 mb-2">
+          1Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea impedit
+          voluptas voluptatem. Debitis fuga harum nesciunt praesentium qui,
+          quisquam tempore. Ab ad amet assumenda facilis impedit libero
+          perspiciatis repellendus voluptas?
         </div>
+      </div>
 
-        <div class="collapse">
-            <div class="border p-2">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea impedit voluptas voluptatem. Debitis fuga harum nesciunt praesentium qui, quisquam tempore. Ab ad amet assumenda facilis impedit libero perspiciatis repellendus voluptas?
-            </div>
+      <div class="collapse" id="collapse2">
+        <div class="border p-2 mb-2">
+          2Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea impedit
+          voluptas voluptatem. Debitis fuga harum nesciunt praesentium qui,
+          quisquam tempore. Ab ad amet assumenda facilis impedit libero
+          perspiciatis repellendus voluptas?
         </div>
+      </div>
     </div>
 
     <script src="../assets/vendor/jquery-3.5.1/jquery-3.5.1.min.js"></script>
     <script src="../assets/vendor/bootstrap-4.5.0/bootstrap.min.js"></script>
-</body>
+  </body>
 </html>
