--- a/tasks/collapse.html
+++ b/tasks/collapse.html
@@ -38,7 +38,7 @@
         Toggle second element
       </button>
 
-      <div class="collapse.show" id="collapse1">
+      <div class="collapse show" id="collapse1">
         <div class="border p-2 mb-2">
           1Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea impedit
           voluptas voluptatem. Debitis fuga harum nesciunt praesentium qui,
