--- a/tasks/projects.html
+++ b/tasks/projects.html
@@ -28,26 +28,24 @@
     </p> -->
 
     <div class="container">
-      <div class="row">
-        <ul class="group">
-          <li class="col-lg-3">
-            <p class="project">Електронний документообіг</p>
-          </li>
-          <li class="col-lg-3"><p class="project">Автоматизація портів</p></li>
-          <li class="col-lg-3"><p class="project">Онлайн-сервіси</p></li>
-          <li class="col-lg-3"><p class="project">Тревел сегмент</p></li>
-          <li class="col-lg-3"><p class="project">Рітейл</p></li>
-          <li class="col-lg-3">
-            <p class="project">Створення контактних центрів</p>
-          </li>
-          <li class="col-lg-3">
-            <p class="project">
-              Віддалене управління великими бізнес процесами
-            </p>
-          </li>
-          <li class="col-lg-3"><p class="project">Доставка</p></li>
-        </ul>
-      </div>
+      <ul class="row">
+        <li class="col-lg-3">
+          <p class="project">Електронний документообіг</p>
+        </li>
+        <li class="col-lg-3"><p class="project">Автоматизація портів</p></li>
+        <li class="col-lg-3"><p class="project">Онлайн-сервіси</p></li>
+        <li class="col-lg-3"><p class="project">Тревел сегмент</p></li>
+        <li class="col-lg-3"><p class="project">Рітейл</p></li>
+        <li class="col-lg-3">
+          <p class="project">Створення контактних центрів</p>
+        </li>
+        <li class="col-lg-3">
+          <p class="project">
+            Віддалене управління великими бізнес процесами
+          </p>
+        </li>
+        <li class="col-lg-3"><p class="project">Доставка</p></li>
+      </ul>
     </div>
   </body>
 </html>
