--- a/tasks/grid.html
+++ b/tasks/grid.html
@@ -70,7 +70,7 @@
           First
         </button>
       </div>
-      <div class="float-right">
+      <div class="d-flex justify-content-end">
         <button>Second</button>
       </div>
     </div>
