--- a/tasks/tabs.html
+++ b/tasks/tabs.html
@@ -20,127 +20,119 @@
     Сверстать <a href="https://www.figma.com/file/l3Ew6VvR3SwaITQqJdpCPi/Tabs?node-id=2%3A22" target="_blank">табы</a>
 </p> -->
 
-    <div class="container">
-      <div class="header-menu">
-        <ul class="nav">
-          <li class="nav-item">
-            <a
-              class="nav-link active"
-              id="news-tab"
-              data-toggle="tab"
-              href="#news"
-              role="tab"
-              aria-controls="news"
-              aria-selected="true"
-              >Новини</a
-            >
-          </li>
-          <li class="nav-item">
-            <a
-              class="nav-link"
-              id="comments-tab"
-              data-toggle="tab"
-              href="#comments"
-              role="tab"
-              aria-controls="comments"
-              aria-haspopup="true"
-              aria-expanded="false"
-              aria-selected="false"
-              >Виступи та коментарі</a
-            >
-          </li>
-          <li class="nav-item">
-            <a
-              class="nav-link"
-              id="anons-tab"
-              data-toggle="tab"
-              href="#anons"
-              role="tab"
-              aria-controls="anons"
-              aria-selected="false"
-              >Анонси</a
-            >
-          </li>
-        </ul>
-      </div>
+    <div class="container tabs-default">
+      <ul class="nav tabs-default_nav">
+        <li>
+          <a
+            class="nav-link active"
+            id="news-tab"
+            data-toggle="tab"
+            href="#news"
+            role="tab"
+            aria-controls="news"
+            aria-selected="true"
+            >Новини</a
+          >
+        </li>
+        <li>
+          <a
+            class="nav-link"
+            id="comments-tab"
+            data-toggle="tab"
+            href="#comments"
+            role="tab"
+            aria-controls="comments"
+            aria-haspopup="true"
+            aria-expanded="false"
+            aria-selected="false"
+            >Виступи та коментарі</a
+          >
+        </li>
+        <li>
+          <a
+            class="nav-link"
+            id="anons-tab"
+            data-toggle="tab"
+            href="#anons"
+            role="tab"
+            aria-controls="anons"
+            aria-selected="false"
+            >Анонси</a
+          >
+        </li>
+      </ul>
 
-      <div
-        class="main-info tab-pane fade show active"
-        id="news"
-        role="tabpanel"
-        aria-labelledby="news-tab"
-      >
-        <div class="pic">
-          <img
-            src="../assets/pics/Rectangle 4.jpg"
-            alt="just one pic"
-            width="174px"
-            height="120px"
-          />
-        </div>
-        <div class="main-text">
-          <div class="first-news">
-            <h3 class="text">
-              Мінцифри збирається навчити 6 мільйонів українців цифрових навичок
-              за 3 роки
-            </h3>
-            <p>1 година тому</p>
-          </div>
-          <div class="second-news">
-            <h3 class="text">
-              Мінсоцполітики: Для громадян з порушенням слуху забезпечена
-              можливість звернутися на «гарячу лінію» 1539 з допомогою послуги
-              сурдоперекладача
-            </h3>
-            <p>3 години тому</p>
+      <div class="tab-content">
+        <div
+          class="tab-pane fade show active"
+          id="news"
+          role="tabpanel"
+          aria-labelledby="news-tab"
+        >
+          <div class="tabs-default_info">
+            <div
+              class="tabs-default_info-pic"
+              style="background-image: url('../assets/pics/Rectangle\ 4.jpg');"
+            ></div>
+            <div class="block">
+              <div>
+                <h3 class="block_text1">
+                  Мінцифри збирається навчити 6 мільйонів українців цифрових
+                  навичок за 3 роки
+                </h3>
+                <p class="block_text2">1 година тому</p>
+              </div>
+              <div>
+                <h3 class="block_text1">
+                  Мінсоцполітики: Для громадян з порушенням слуху забезпечена
+                  можливість звернутися на «гарячу лінію» 1539 з допомогою
+                  послуги сурдоперекладача
+                </h3>
+                <p class="block_text2">3 години тому</p>
+              </div>
+            </div>
           </div>
         </div>
-      </div>
-
-      <div
-        class="main-info tab-pane fade"
-        id="comments"
-        role="tabpanel"
-        aria-labelledby="comments-tab"
-      >
-        <div class="pic">
-          <img
-            src="../assets/pics/Rectangle 4.jpg"
-            alt="just one pic"
-            width="174px"
-            height="120px"
-          />
-        </div>
-        <div class="main-text">
-          <div class="first-comments">
-            <h3 class="text">
-              Коментарі
-            </h3>
-            <p>5 годин тому</p>
+        <div
+          class="tab-pane fade"
+          id="comments"
+          role="tabpanel"
+          aria-labelledby="comments-tab"
+        >
+          <div class="tabs-default_info">
+            <div
+              class="tabs-default_info-pic"
+              style="background-image: url('../assets/pics/Rectangle\ 4.jpg');"
+            ></div>
+            <div class="block">
+              <div>
+                <h3 class="block_text1">
+                  Коментарі
+                </h3>
+                <p class="block_text2">12 годин тому</p>
+              </div>
+            </div>
           </div>
         </div>
-      </div>
-
-      <div
-        class="main-info tab-pane fade"
-        id="anons"
-        role="tabpanel"
-        aria-labelledby="anons-tab"
-      >
-        <div class="pic">
-          <img
-            src="../assets/pics/Rectangle 4.jpg"
-            alt="just one pic"
-            width="174px"
-            height="120px"
-          />
-        </div>
-        <div class="main-text">
-          <div class="first-anons">
-            <h3 class="text">
-              Анонс
-            </h3>
-            <p>100 годин тому</p>
+        <div
+          class="tab-pane fade"
+          id="anons"
+          role="tabpanel"
+          aria-labelledby="anons-tab"
+        >
+          <div class="tabs-default_info">
+            <div
+              class="tabs-default_info-pic"
+              style="background-image: url('../assets/pics/Rectangle\ 4.jpg');"
+            ></div>
+            <div class="block">
+              <div>
+                <h3 class="block_text1">
+                  Анонс
+                </h3>
+                <p class="block_text2">100 годин тому</p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
